[tool.poetry]
name = "hino-test"
version = "0.1.0"
description = ""
authors = ["hafidabid <aselole87@gmail.com>"]
readme = "README.md"
packages = [{include = "hino_test"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.101.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
